--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>El título del documento va aquí</title>
+    <title>RESONANCIA</title>
     <link rel="stylesheet" href="estilo/estilo.css">
 </head>
 <body>
-    <header>Aquí va header</header>
+    <header> Trata de un ejercicio de conciencia y reflexión que consiste en el intercambio de cartas de diseño libre con mensajes positivos entre los alumnos del quinto trimestre de la carrera de artes y comunicación digitales, el cual tiene como finalidad promover la comunicación y generar empatía y convivencia entre los mismos, esto a raíz de la fractura social impulsada por el aislamiento por COVID 19 y el paro de actividades escolares; todo esto se verá reflejado en un corto documental que apela a la sensibilidad para empatizar a los participantes y espectadores. </header>
     
     <nav><a href="html/pandemia.html">Pandemia</a> Afectación de las relaciones sociales por la pandemia</nav>
 
